--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "advent_of_code"
 version = "0.9.4"
-authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
+authors = ["HKGx"]
 edition = "2021"
 default-run = "advent_of_code"
 publish = false
